--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <!-- Visual Highlight -->
     <section id="gallery" class="py-16 bg-white text-center">
-    <h2 class="text-3xl font-semibold mb-6">Glimse of Gaushala</h2>
+    <h2 class="text-3xl font-semibold mb-6">Glimpses of Gaushala</h2>
     <div class="relative w-full max-w-4xl mx-auto overflow-hidden rounded-lg shadow-lg">
       <div id="carouselImages" class="flex transition-transform duration-500 ease-in-out">
         <img src="image1.jpeg" class="w-full flex-shrink-0" alt="Gallery Image 1" />
