--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="#donate" class="hover:text-green-600 transition-colors duration-200">Donate</a>
         <a href="#contact" class="hover:text-green-600 transition-colors duration-200">Contact</a>
       </nav>
+      
 
       <!-- Mobile Menu Toggle -->
       <button id="menuToggle" class="md:hidden text-2xl text-green-700 focus:outline-none">☰</button>
@@ -97,6 +98,9 @@
       <a href="#donate" class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700">Make A Difference</a>
     </div>
   </section>
+  <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
+
+  
 
   <!-- Visual Highlight -->
     <section id="gallery" class="py-16 bg-gray-50 text-center">
@@ -122,6 +126,7 @@
     </div>
     <p class="text-gray-500 mt-4 text-sm">(Swipe or click arrows to view more photos)</p>
   </section>
+  <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
 
   <!-- About Us -->
   <section id="about" class="py-16 bg-gray-50 text-center">
@@ -129,6 +134,7 @@
     <p class="max-w-3xl mx-auto text-lg">Navkar Gaushala began in Dhule with a small group of devotees who believed in Ahimsa and Jeevdaya. Over five years, it has grown into a safe home for hundreds of injured and abandoned cows thanks to our caretakers, trustees, and supporters.</p>
     <p class="mt-4 text-sm">(Trustee names will be listed here)</p>
   </section>
+  <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
 
   <!-- Our Work -->
   <section id="work" class="py-16 bg-gray-50 text-center">
@@ -148,6 +154,7 @@
       </div>
     </div>
   </section>
+  <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
 
   <!-- Visit Section -->
   <section id="visit" class="py-16 bg-gray-50 text-center">
@@ -157,6 +164,7 @@
     <p>Timings: 9 AM – 5 PM</p>
     <a class="text-green-600 underline mt-2 inline-block" href="https://maps.app.goo.gl/b8mEbgnMA4sQe9dc9" target="_blank">Open in Google Maps</a>
   </section>
+  
 
   <!-- Gallery with Carousel -->
 
@@ -180,6 +188,7 @@
       <p class="text-xs">Trust Reg No: E-489(Dhule) dt.30-03-2001 | PAN: AABTN3273B | 80G: Applied For</p>
     </div>
   </section>
+  
 
   <!-- Contact Section -->
   <section id="contact" class="py-16 bg-gray-50 text-center">
@@ -190,6 +199,7 @@
       <a href="https://www.facebook.com/navkargaushala" class="text-blue-600 underline" target="_blank">Facebook</a>
     </div>
   </section>
+  <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
 
   <!-- Footer -->
   <footer class="bg-gray-100 py-6 text-center text-sm">
