--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- Mission Section -->
   <section class="py-16 bg-gray-50 text-center" id="mission">
     <h2 class="text-3xl font-semibold mb-4">Our Mission</h2>
-    <p class="max-w-xl mx-auto text-lg mb-6">We care for over 300 cows with love and devotion. Our goal is to provide every cow with food, shelter, and peace.</p>
+    <p class="max-w-xl mx-auto text-lg mb-6">We care for over 1100 cows with love and devotion. Our goal is to provide every cow with food, shelter, and peace.</p>
     <a href="#donate" class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700">Help Now</a>
   </section>
 
@@ -78,15 +78,15 @@
     <h2 class="text-3xl font-semibold mb-6">Our Impact</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 max-w-4xl mx-auto">
       <div>
-        <p class="text-2xl font-bold">300+</p>
-        <p>Cows cared for</p>
+        <p class="text-2xl font-bold">1177+</p>
+        <p>Cattle cared for</p>
       </div>
       <div>
-        <p class="text-2xl font-bold">6 acres</p>
+        <p class="text-2xl font-bold">8 acres</p>
         <p>Shelter land</p>
       </div>
       <div>
-        <p class="text-2xl font-bold">12,000+ kg</p>
+        <p class="text-2xl font-bold">150+</p>
         <p>Monthly fodder</p>
       </div>
       <div>
@@ -130,11 +130,33 @@
 
   <!-- About Us -->
   <section id="about" class="py-16 bg-gray-50 text-center">
-    <h2 class="text-3xl font-semibold mb-4">About Us</h2>
-    <p class="max-w-3xl mx-auto text-lg">Navkar Gaushala began in Dhule with a small group of devotees who believed in Ahimsa and Jeevdaya. Over five years, it has grown into a safe home for hundreds of injured and abandoned cows thanks to our caretakers, trustees, and supporters.</p>
-    <p class="mt-4 text-sm">(Trustee names will be listed here)</p>
-  </section>
-  <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
+  <h2 class="text-3xl font-semibold mb-4">About Us</h2>
+
+  <div class="mb-6 text-base font-medium">
+    <p>Kantilal Chaudhary (President)</p>
+    <p>Dr. Vinod Chhajed (Vice President)</p>
+    <p>Rajendra Chaudhary (Secretary)</p>
+    <p>Dileep Bafna (Co-secretary)</p>
+    <p>Nirmal Bhatewara (Treasurer)</p>
+  </div>
+
+  <p class="max-w-3xl mx-auto text-lg">
+    Navkar Gaushala began in Dhule with a small group of devotees who believed in Ahimsa and Jeevdaya.
+    Over five years, it has grown into a safe home for hundreds of injured and abandoned cows thanks to our caretakers, trustees, and supporters.
+  </p>
+
+   <div class="mt-6 max-w-4xl mx-auto text-sm text-gray-700 italic">
+    <p>
+      Trustees: Sunil Mutha, Subhashchandra Bader, Rikhabchand Lunkad, Yogesh Rathod, Jayantilal Chaudhary, 
+      Kishore Oswal, Sunil Bhansali,
+    </p>
+    <p>
+      Sohanlal Chhajed, Rajendra Bhansali
+    </p>
+  </div>
+</section>
+<hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
+
 
   <!-- Our Work -->
   <section id="work" class="py-16 bg-gray-50 text-center">
@@ -193,7 +215,7 @@
   <!-- Contact Section -->
   <section id="contact" class="py-16 bg-gray-50 text-center">
     <h2 class="text-3xl font-semibold mb-4">Contact Us</h2>
-    <p>Phone: 02562-232093<br>Email: ngpd2001@gmail.com<br>WhatsApp: 9823172765</p>
+    <p>Phone: 02562-232093<br>Email: ngpd2001@gmail.com<br>WhatsApp: 9423193820</p>
     <div class="mt-2">
       <a href="https://www.instagram.com/navkargaushala" class="text-blue-600 underline" target="_blank">Instagram</a> |
       <a href="https://www.facebook.com/navkargaushala" class="text-blue-600 underline" target="_blank">Facebook</a>
@@ -215,6 +237,14 @@
       <a href="#" class="mx-1 underline text-gray-600">Terms</a>
     </div>
   </footer>
+  <a href="https://wa.me/919423193820" target="_blank"
+    class="fixed bottom-5 right-5 bg-green-600 hover:bg-green-700 text-white px-4 py-3 rounded-full shadow-lg flex items-center space-x-2 z-50 transition duration-200">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
+      <path
+        d="M20.52 3.48A11.83 11.83 0 0 0 12 0C5.37 0 .01 5.37 0 12c0 2.11.55 4.18 1.6 6L0 24l6.19-1.62A11.92 11.92 0 0 0 12 24h.01C18.63 24 24 18.63 24 12c0-3.17-1.23-6.16-3.48-8.52zM12.01 22c-1.76 0-3.48-.46-5.01-1.32l-.36-.2-3.67.97.98-3.58-.23-.37a9.93 9.93 0 0 1-1.55-5.25c0-5.5 4.48-9.98 9.99-9.98A9.95 9.95 0 0 1 22 12c0 5.52-4.49 10-9.99 10h-.01zm5.27-7.57c-.29-.15-1.71-.85-1.98-.94-.27-.1-.47-.15-.67.15-.2.29-.76.94-.93 1.13-.17.2-.34.22-.63.07a8.27 8.27 0 0 1-2.44-1.5 9.15 9.15 0 0 1-1.7-2.11c-.18-.3 0-.46.13-.61.13-.14.29-.35.43-.53.14-.18.19-.3.29-.49.1-.2.05-.37-.03-.52-.08-.15-.67-1.61-.92-2.21-.24-.58-.48-.5-.67-.5h-.57c-.2 0-.52.07-.8.37-.27.29-1.06 1.04-1.06 2.54s1.08 2.95 1.23 3.15c.15.2 2.13 3.25 5.17 4.56.72.31 1.28.5 1.72.64.72.23 1.37.2 1.88.13.58-.08 1.71-.7 1.95-1.38.24-.68.24-1.27.17-1.39-.07-.13-.27-.21-.56-.36z" />
+    </svg>
+    <span class="hidden sm:inline">WhatsApp Us</span>
+  </a>
 
   <!-- Carousel Script -->
   <script>
