--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>Shelter land</p>
       </div>
       <div>
-        <p class="text-2xl font-bold">150+</p>
+        <p class="text-2xl font-bold">150 tons+</p>
         <p>Monthly fodder</p>
       </div>
       <div>
@@ -129,39 +129,43 @@
   <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
 
   <!-- About Us -->
-  <section id="about" class="py-16 bg-gray-50 text-center">
-  <h2 class="text-3xl font-semibold mb-4">About Us</h2>
+ <section id="about" class="py-20 bg-gray-100 text-center">
+  <div class="max-w-5xl mx-auto px-4">
+    <h2 class="text-4xl font-bold text-gray-800 mb-6">About Us</h2>
 
-  <div class="mb-6 text-base font-medium">
-    <p>Kantilal Chaudhary (President)</p>
-    <p>Dr. Vinod Chhajed (Vice President)</p>
-    <p>Rajendra Chaudhary (Secretary)</p>
-    <p>Dileep Bafna (Co-secretary)</p>
-    <p>Nirmal Bhatewara (Treasurer)</p>
-  </div>
-
-  <p class="max-w-3xl mx-auto text-lg">
-    Navkar Gaushala began in Dhule with a small group of devotees who believed in Ahimsa and Jeevdaya.
-    Over five years, it has grown into a safe home for hundreds of injured and abandoned cows thanks to our caretakers, trustees, and supporters.
-  </p>
-
-   <div class="mt-6 max-w-4xl mx-auto text-sm text-gray-700 italic">
-    <p>
-      Trustees: Sunil Mutha, Subhashchandra Bader, Rikhabchand Lunkad, Yogesh Rathod, Jayantilal Chaudhary, 
-      Kishore Oswal, Sunil Bhansali,
+    <p class="text-lg text-gray-700 mb-10 leading-relaxed">
+      Navkar Gaushala began in Dhule with a small group of devotees who believed in <span class="font-semibold">Ahimsa</span> and <span class="font-semibold">Jeevdaya</span>.
+      Over the past five years, it has grown into a sanctuary for hundreds of injured and abandoned cows — a reality made possible by the dedication of our caretakers, trustees, and supporters.
     </p>
-    <p>
-      Sohanlal Chhajed, Rajendra Bhansali
-    </p>
+
+    <div class="bg-white rounded-xl shadow-md p-6 mb-8">
+      <h3 class="text-xl font-semibold text-gray-800 mb-4">Core Team</h3>
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 text-gray-700">
+        <p><span class="font-medium">Kantilal Chaudhary</span> — President</p>
+        <p><span class="font-medium">Dr. Vinod Chhajed</span> — Vice President</p>
+        <p><span class="font-medium">Rajendra Chaudhary</span> — Secretary</p>
+        <p><span class="font-medium">Dileep Bafna</span> — Co-secretary</p>
+        <p><span class="font-medium">Nirmal Bhatewara</span> — Treasurer</p>
+      </div>
+    </div>
+
+    <div class="bg-white rounded-xl shadow-md p-6 text-gray-700">
+      <h3 class="text-xl font-semibold text-gray-800 mb-4">Trustees</h3>
+      <p class="italic">
+        Sunil Mutha, Subhashchandra Bader, Rikhabchand Lunkad, Yogesh Rathod, Jayantilal Chaudhary,
+        Kishore Oswal, Sunil Bhansali, Sohanlal Chhajed, Rajendra Bhansali
+      </p>
+    </div>
   </div>
 </section>
+
 <hr class="w-1/2 h-1 mx-auto bg-green-700 border-0 rounded">
 
 
   <!-- Our Work -->
   <section id="work" class="py-16 bg-gray-50 text-center">
     <h2 class="text-3xl font-semibold mb-8">Our Work</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-5xl mx-auto">
       <div>
         <h3 class="text-xl font-bold mb-2">Cow Rescue & Care</h3>
         <p>We rescue cows from accidents, abandonment, and cruelty. Each cow is fed, treated, and given a clean place to rest.</p>
